Bug 1510996 - Abandoned phabricator revisions should be hidden by default

--- a/extensions/PhabBugz/web/style/phabricator.css
+++ b/extensions/PhabBugz/web/style/phabricator.css
@@ -179,3 +179,7 @@ span[class^="review-status-icon-"]::before
     padding: 1px;
     border: 0px;
 }
+
+.revision-hide {
+    display: none;
+}
